Fixing info rating button z-index

--- a/src/beta/black-highlighter-beta.css
+++ b/src/beta/black-highlighter-beta.css
@@ -8348,7 +8348,7 @@ div.blockquote,
 #page-content .rate-box-with-credit-button > .creditButton > p > a::after {
 	content: " ";
 	position: absolute;
-	z-index: -1;
+	z-index: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
@@ -8381,6 +8381,7 @@ div.blockquote,
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 1;
 	width: calc((var(--base-font-size) * (14 / 15)) * 1.5);
 	height: 100%;
 	transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1);
